--- a/src/custom-tab-bar/index.scss
+++ b/src/custom-tab-bar/index.scss
@@ -1,37 +1,3 @@
-.tab-bar {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100px;
-  background: white;
-  display: flex;
-  padding-bottom: env(safe-area-inset-bottom);
-}
-
-.tab-bar-item {
-  flex: 1;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  position: relative;
-}
-
-.tab-bar-item cover-image {
-  width: 54px;
-  height: 54px;
-  border-radius: 50%;
-  transition: transform 0.3s, box-shadow 0.3s;
-}
-
-.tab-bar-item cover-view {
-  font-size: 20px;
-}
-
-/* Styles to make the third tab icon protrude */
-.tab-bar-item:nth-child(3) cover-image {
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  transform: translateY(-10px) scale(1.2);
+.nut-tabbar-item__icon-box-nav {
+  margin-top: 20rpx;
 }
